# DeepseekCode

./: .gitignore  CLAUDE.md  README.md  build-and-package.ps1  build-full.ps1  harness.cjs  index.html  package-lock.json  package.json
.claude/: cloude-code-toolbox-mcp-skills-awareness.md
docs/: architecture.md  mobile-remote-api.md  research.md
scripts/: create-win-test-cert.cjs  dist-win-test.cjs  prepare-win-runtime.cjs
src/: App.tsx  composerKeys.ts  desktopApi.ts  global.d.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  app.manifest  app.rc  build.rs  fake_rc.c  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/: composerKeys.test.cjs
