[package]
name = "ds-code"
version = "0.1.0"
description = "Desktop shell for DeepSeek TUI coding agent"
authors = ["DeepSeek"]
edition = "2021"

[lib]
name = "ds_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
portable-pty = "0.8"
git2 = "0.19"
crypto = { package = "aes-gcm", version = "0.10" }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
glob = "0.3"
cron = "0.15"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
tiny_http = "0.12"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
